--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
     "eslint-config-prettier": "8.8.0",
     "eslint-plugin-prettier": "5.0.0",
     "prettier": "3.0.0",
+    "prisma": "5.0.0",
     "tsup": "7.1.0",
     "tsx": "3.12.7",
     "typescript": "5.1.6"
   },
   "dependencies": {
+    "@prisma/client": "5.0.0",
     "dotenv": "16.3.1",
     "fastify": "4.20.0",
     "zod": "3.21.4"
