--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,6 @@
 NODE_ENV=development
 APP_PORT=3333
 DATABASE_URL="postgresql://johndoe:MyPassword123@localhost:5432/my_database?schema=public"
+DATABASE_USER=johndoe
+DATABASE_PASSWORD=MyPassword123
+DATABASE_NAME=my_database
