--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "license": "ISC",
   "devDependencies": {
     "@rocketseat/eslint-config": "2.1.0",
+    "@types/bcryptjs": "2.4.2",
     "@types/node": "20.4.5",
     "eslint": "8.45.0",
     "eslint-config-prettier": "8.8.0",
@@ -28,9 +29,9 @@
   },
   "dependencies": {
     "@prisma/client": "5.0.0",
+    "bcryptjs": "2.4.3",
     "dotenv": "16.3.1",
     "fastify": "4.20.0",
-    "fastify-type-provider-zod": "1.1.9",
     "zod": "3.21.4"
   }
 }
