--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,6 +2,7 @@
   "extends": ["@rocketseat/eslint-config/node", "plugin:prettier/recommended"],
   "plugins": ["prettier"],
   "rules": {
+    "no-useless-constructor": "off",
     "prettier/prettier": "error"
   }
 }
