--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "index.js",
   "scripts": {
     "dev": "NODE_DEBUG=server:* tsx watch src/server.ts",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "test:cov": "vitest run --coverage",
+    "test:ui": "vitest --ui",
     "lint": "npx tsc --noemit && npx eslint src --ext .ts",
     "lint:fix": "eslint src --ext .ts --fix",
     "build": "tsup src --out-dir build",
@@ -15,9 +18,12 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@faker-js/faker": "8.0.2",
     "@rocketseat/eslint-config": "2.1.0",
     "@types/bcryptjs": "2.4.2",
     "@types/node": "20.4.5",
+    "@vitest/coverage-v8": "0.33.0",
+    "@vitest/ui": "0.33.0",
     "eslint": "8.45.0",
     "eslint-config-prettier": "8.8.0",
     "eslint-plugin-prettier": "5.0.0",
@@ -25,7 +31,9 @@
     "prisma": "5.0.0",
     "tsup": "7.1.0",
     "tsx": "3.12.7",
-    "typescript": "5.1.6"
+    "typescript": "5.1.6",
+    "vite-tsconfig-paths": "4.2.0",
+    "vitest": "0.33.0"
   },
   "dependencies": {
     "@prisma/client": "5.0.0",
